--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,11 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  display: flex;
+  flex: 0 0 18%;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80vh; }
 
 .hotel-view {
   background-color: #fff;
@@ -137,3 +141,48 @@ body {
     border-radius: 50%;
     margin-right: 1rem;
     height: 3.75rem; }
+
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem; }
+  .side-nav__item {
+    position: relative; }
+    .side-nav__item:not(::last-child) {
+      margin-bottom: .5rem; }
+  .side-nav__item::before {
+    background-color: var(--color-primary);
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
+    top: 0;
+    width: 3px; }
+  .side-nav__item:hover::before, .side-nav__item--active::before {
+    transform: scaleY(1);
+    width: 100%; }
+  .side-nav__item:active::before {
+    background-color: var(--color-primary-light); }
+  .side-nav__link:link, .side-nav__link:visited {
+    align-items: center;
+    color: var(--color-grey-light-1);
+    display: flex;
+    display: block;
+    padding: 1.5rem 3rem;
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    z-index: 10; }
+  .side-nav__icon {
+    fill: currentColor;
+    margin-right: 2rem;
+    height: 1.75rem;
+    width: 1.75rem; }
+
+.legal {
+  color: var(--color-grey-light-4);
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem; }
