--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -108,3 +108,73 @@
         height: 3.75rem;
     }
 }
+
+// side navigation
+.side-nav {
+    font-size: 1.4rem;
+    list-style: none;
+    margin-top: 3.5rem;
+
+    &__item {
+        position: relative;
+
+        &:not(::last-child) {
+            margin-bottom: .5rem;
+        }
+    }
+    
+    &__item::before {
+        background-color: var(--color-primary);
+        content: "";
+        height: 100%;
+        left: 0;
+        position: absolute;
+        transform: scaleY(0);
+        transition: 
+            transform .2s, 
+            width .4s cubic-bezier(1, 0, 0, 1) .2s,
+            background-color .1s;
+        top: 0;
+        width: 3px;
+    }
+
+    &__item:hover::before,
+    &__item--active::before
+    {
+        transform: scaleY(1);
+        width: 100%;
+    }
+
+    &__item:active::before {
+        background-color: var(--color-primary-light);
+    }
+
+    &__link:link,
+    &__link:visited{
+        align-items: center;
+        color: var(--color-grey-light-1);
+        display: flex;
+        display: block;
+        padding: 1.5rem 3rem;
+        position: relative;
+        text-decoration: none;
+        text-transform: uppercase;
+        z-index: 10;
+    }
+
+    &__icon {
+        fill: currentColor;
+        margin-right: 2rem;
+        height: 1.75rem;
+        width: 1.75rem;
+    }
+}
+
+//legal text
+
+.legal {
+    color: var(--color-grey-light-4);
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 2.5rem;
+}
