--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -178,3 +178,114 @@
     text-align: center;
     padding: 2.5rem;
 }
+
+//gallery
+
+.gallery {
+    display: flex;
+
+    &__photo {
+        display: block;
+        width: 100%;
+    }
+}
+
+//hotel overview
+
+.overview {
+    align-items: center;
+    border-bottom: 1px solid var(--color-grey-light-2);
+    display: flex;
+    
+    &__heading {
+        font-size: 2.25rem;
+        font-weight: 300;
+        letter-spacing: 1px;
+        padding: 1.5rem 3rem;
+        text-transform: uppercase;
+    }
+
+    &__stars {
+        display: flex;
+        margin-right: auto;
+    }
+
+    &__icon-star,
+    &__icon-location {
+        fill: var(--color-primary);
+        height: 1.75rem;
+        width: 1.75rem;
+    }
+
+    &__location {
+        display: flex;
+        font-size: 1.2rem;
+        vertical-align: center;
+    }
+
+    &__icon-location {
+        margin-right: .5rem;
+    }
+
+    &__rating {
+        align-items: center;
+        align-self: stretch;
+        background-color: var(--color-primary);
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        margin-left: 3rem;
+        padding: 0 2.25rem;
+        justify-content: center;
+    }
+
+    &__rating-average {
+        font-size: 2.25rem;
+        font-weight: 300;
+        margin-bottom: -3px;
+    }
+
+    &__rating-count {
+        font-size: .8rem;
+        text-transform: uppercase;
+    }
+}
+
+//button inline
+.btn-inline {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid currentColor;
+    color: var(--color-primary);
+    cursor: pointer;
+    display: inline-block;
+    font-size: inherit;
+    padding-bottom: 2px;
+    transition: all .2s;
+
+    &:hover {
+        color: var(--color-grey-dark-1);
+    }
+
+    &:focus {
+        animation: pulsate 1s infinite;
+        outline: none;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        box-shadow: none;
+        transform: scale(1);
+    }
+
+    50% {
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, .25);
+        transform: scale(1.05);
+    }
+
+    100% {
+        box-shadow: none;
+        transform: scale(1);
+    }
+}
