--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
 .header {
     align-items: center;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
     display: flex;
     font-size: 1.4rem;
     height: 7rem;
@@ -28,11 +28,31 @@
     flex: 0 0 18%;
     flex-direction: column;
     justify-content: space-between;
-
-    height: 80vh;
 }
 
 .hotel-view {
     background-color: #fff;
+    flex: 1;
+}
+
+.detail {
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+    display: flex;
+    padding: 4.5rem;
+}
+
+.description {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    flex: 0 0 60%;
+    font-size: 1.4rem;
+    margin-right: 3.5rem;
+    padding: 3rem;
+}
+
+.user-reviews {
+    background-color: yellow;
+    //remaning space
     flex: 1;
 }
