--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,10 +1,12 @@
 //logo
+
 .logo {
     height: 3.25rem;
     margin-left: 2rem;
 }
 
 //search
+
 .search {
     align-items: center;
     display: flex;
@@ -60,6 +62,7 @@
 }
 
 //user navigation
+
 .user-nav {
     align-items: center;
     align-self: stretch;
@@ -110,6 +113,7 @@
 }
 
 // side navigation
+
 .side-nav {
     font-size: 1.4rem;
     list-style: none;
@@ -194,7 +198,7 @@
 
 .overview {
     align-items: center;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
     display: flex;
     
     &__heading {
@@ -252,6 +256,7 @@
 }
 
 //button inline
+
 .btn-inline {
     background-color: transparent;
     border: none;
@@ -287,5 +292,76 @@
     100% {
         box-shadow: none;
         transform: scale(1);
+    }
+}
+
+
+//paragraph
+
+.paragraph:not(:last-of-type) {
+    margin-bottom: 2rem;
+}
+
+
+
+//list
+
+.list {
+    border-bottom: var(--line);
+    border-top: var(--line);
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+
+    &__item {
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+
+    &__item:before {
+        //older browsers
+        // background-image: url(../img/chevron-thin-right.svg);
+        // background-size: cover;
+
+        //new browsers - masks
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        margin-right: .7rem;
+        width: 1rem;
+    }
+}
+
+
+
+// recommend
+
+.recommend {
+    align-items: center;
+    color: var(--color-grey-dark-3);
+    display: flex;
+    font-size: 1.3rem;
+
+    &__count {
+        margin-right: auto;
+    }
+
+    &__photo {
+        border: 3px solid #fff;
+        border-radius: 50%;
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
     }
 }
