--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -268,8 +268,17 @@
     padding-bottom: 2px;
     transition: all .2s;
 
+    & span {
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
+
     &:hover {
         color: var(--color-grey-dark-1);
+
+        span {
+            margin-left: 8px;
+        }
     }
 
     &:focus {
@@ -353,6 +362,10 @@
         margin-right: auto;
     }
 
+    &__friends {
+        display: flex;
+    }
+
     &__photo {
         border: 3px solid #fff;
         border-radius: 50%;
@@ -363,5 +376,68 @@
         &:not(:last-child) {
             margin-right: -1.5rem;
         }
+    }
+}
+
+//reviews
+
+.review {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);   
+    margin-bottom: 3.5rem;
+    overflow: hidden;
+    padding: 3rem;
+    position: relative;
+
+    &__text {
+        margin-bottom: 2rem;
+        position: relative;
+        z-index: 10;
+    }
+
+    &__user {
+        align-items: center;
+        display: flex;
+    }
+
+    &__photo {
+        border-radius: 50%;
+        height: 4.5rem;
+        width: 4.5rem;
+        margin-right: 1.5rem;
+    }
+
+    &__user-box {
+        margin-right: auto;
+    }
+
+    &__user-name {
+        font-size: 1.1rem;
+        font-weight: 600;
+        margin-bottom: .4rem;
+        text-transform: uppercase;
+    }
+
+    &__user-date {
+        color: var(--color-grey-dark-3);
+        font-size: 1rem;
+    }
+
+    &__rating {
+        color: var(--color-primary);
+        font-size: 2.2rem;
+        font-weight: 300;
+    }
+
+    &::before {
+        content: "\201C";
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        font-size: 20rem;
+        left: -1rem;
+        line-height: 1;
+        position: absolute;
+        top: -2.75rem;
+        z-index: 1;
     }
 }
