--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,11 @@
     --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75em; //1200px
+$bp-large: 68.75em; //1100px
+$bp-medium: 56.25em; //900px
+$bp-small: 37.5em; //600px
+$bp-smallest: 31.25em; //500px
 
 *{
     margin: 0;
@@ -33,6 +38,10 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%; //1 rem= 10px/16px = 62.5%
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
@@ -44,5 +53,4 @@ body {
     font-weight: 400;
     line-height: 1.6;
     min-height: 100vh;
-    overflow: hidden;
 }
