--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,6 +4,12 @@
     margin: 4rem auto;
     max-width: 120rem;
     min-height: 50rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
 
 .header {
@@ -14,10 +20,20 @@
     font-size: 1.4rem;
     height: 7rem;
     justify-content: space-between;
+
+    @media only screen and (max-width: $bp-smallest) {
+        align-content: space-around;
+        flex-wrap: wrap;
+        height: 11rem;
+    }
 }
 
 .content {
     display: flex;
+
+    @media only screen and (max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
 
 .sidebar {
@@ -40,6 +56,14 @@
     display: flex;
     font-size: 1.4rem;
     padding: 4.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        flex-direction: column;
+    }
 }
 
 .description {
@@ -48,6 +72,16 @@
     flex: 0 0 60%;
     margin-right: 4.5rem;
     padding: 3rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        margin-right: 3rem;
+        padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        margin-bottom: 3rem;
+        margin-right: 0;
+    }
 }
 
 .user-reviews {
