--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -133,7 +133,7 @@
     &__item {
         position: relative;
 
-        &:not(::last-child) {
+        &:not(:last-child) {
             margin-bottom: .5rem;
 
             @media only screen and (max-width: $bp-medium) {
